Fix: Address remaining deprecation warnings related to newInstance(), getNamedQuery(), and java.security.Policy